# remodel-core

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: publish-remodel-core.yml
src/: error.rs  lib.rs
src/format/: mod.rs
src/models/: cardinality.rs  conceptual.rs  logical.rs  mod.rs  types.rs
src/sql/: ddl.rs  dialect.rs  mod.rs
src/transform/: conceptual_to_logical.rs  mod.rs  options.rs
src/validation/: mod.rs
tests/: sql_ddl.rs  validation.rs
